kubernetes/envoy/envoy_deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
  labels:
    app: envoy
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: https
    port: 443
    targetPort: http
    protocol: TCP    
  selector:
    app: envoy
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: envoy
  labels:
    app: envoy
spec:
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: envoy
      containers:                  
        - name: envoy
          image: luccasbeltrame/envoy
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 8080
          - name: envoy-admin
            containerPort: 9901
          - name: https
            containerPort: 8443            
          env:
          - name: "ENVOY_LB_ALG"
            value: "LEAST_REQUEST"
          - name: "SERVICE_NAME"
            value: "myapp" 
          volumeMounts:
          - name: config-volume
            mountPath: /etc/envoy/
